docker: Fixed issue text overflowing the restart policy dropdown
Mentioned in https://github.com/cockpit-project/cockpit/pull/4172#issuecomment-208320117
Fixed with https://github.com/cockpit-project/cockpit/pull/4172#issuecomment-208328846

--- a/pkg/docker/docker.css
+++ b/pkg/docker/docker.css
@@ -222,6 +222,12 @@
     max-width: 150px;
 }
 
+#restart-policy-select > button > span.pull-left {
+    overflow: hidden;
+    width: 100%;
+    text-align: left;
+}
+
 #restart-policy-retries-container {
     display: inline;
     margin-left: 4px;
